# rattler

./: Cargo.toml
crates/rattler_shell/src/shell/: mod.rs
