[package]
name = "rattler_shell"
version = "0.24.2"
edition.workspace = true
authors = ["Wolf Vollprecht <w.vollprecht@gmail.com>"]
description = "A crate to help with activation and deactivation of a conda environment"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]

[dependencies.tracing]
version = "0.1.41"

[dependencies.thiserror]
version = "2.0"

[dependencies.tempfile]
version = "3.20.0"

[dependencies.sysinfo]
version = "0.35.1"
optional = true

[dependencies.shlex]
version = "1.3.0"

[dependencies.serde_json]
version = "1.0.140"
features = ["preserve_order"]
[dependencies.rattler_pty]
path = "crates/rattler_pty"
version = "=0.2.4"
default-features = false

[dependencies.rattler_conda_types]
path = "crates/rattler_conda_types"
version = "=0.35.4"
default-features = false

[dependencies.itertools]
version = "0.14.0"

[dependencies.fs-err]
version = "3.1.0"
[dependencies.indexmap]
version = "2.9.0"

[dependencies.enum_dispatch]
version = "0.3.13"

[dependencies.anyhow]
version = "1.0.98"
[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
tempdir = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
